RESOLVED FIXED110488
Work around a MSVC 2012 Update 1 bug causing a crash on x86
https://bugs.webkit.org/show_bug.cgi?id=110488
Summary Work around a MSVC 2012 Update 1 bug causing a crash on x86
Jocelyn Turcotte
Reported 2013-02-21 09:58:28 PST
Work around a MSVC 2012 Update 1 bug causing a crash on x86
Attachments
Patch (1.76 KB, patch)
2013-02-21 10:00 PST, Jocelyn Turcotte
andersca: review-
Patch (2.24 KB, patch)
2013-02-25 08:11 PST, Jocelyn Turcotte
andersca: review+
Jocelyn Turcotte
Comment 1 2013-02-21 10:00:26 PST
Anders Carlsson
Comment 2 2013-02-22 11:02:57 PST
Comment on attachment 189548 [details] Patch This absolutely needs a comment. Also, I think it should be surrounded in an #ifdef so that we can remove it eventually.
Jocelyn Turcotte
Comment 3 2013-02-25 08:11:00 PST
Created attachment 190063 [details] Patch Added the ifdef as well since the comment alone would lack context.
Anders Carlsson
Comment 4 2013-02-25 09:10:42 PST
Comment on attachment 190063 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=190063&action=review > Source/WebCore/platform/text/TextEncodingRegistry.cpp:73 > + if (c1 != c2) I think you should put a return false inside the #ifdef. > Source/WebCore/platform/text/TextEncodingRegistry.cpp:78 > +#endif And then extend the ifdef below the return false; line.
Jocelyn Turcotte
Comment 5 2013-02-26 05:03:59 PST
Note You need to log in before you can comment on or make changes to this bug.