Source/WebCore/platform/text/TextEncodingRegistry.cpp
@@ -65,10 +65,19 @@ struct TextEncodingNameHash {
         char c1;
         char c2;
         do {
+#if defined(_MSC_FULL_VER) && _MSC_FULL_VER == 170051106
+            // Workaround for a bug in the VS2012 Update 1 optimizer, remove once the fix is released.
+            // https://connect.microsoft.com/VisualStudio/feedback/details/777533/vs2012-c-optimizing-bug-when-using-inline-and-char-return-type-x86-target-only
+            c1 = toASCIILower(*s1++);
+            c2 = toASCIILower(*s2++);
+            if (c1 != c2)
+                return false;
+#else
             c1 = *s1++;
             c2 = *s2++;
             if (toASCIILower(c1) != toASCIILower(c2))
                 return false;
+#endif
         } while (c1 && c2);
         return !c1 && !c2;
     }
